--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="logic.js"></script>
+    <script src="logic.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <button class = "button">Rock!</button>
+    <button class = "button">Paper!</button>
+    <button class = "button">Scissors!</button>
     
+    <div class = "results"></div>
 </body>
 </html>
